****************************
Changelog for eXtplorer
Version $Id$
****************************
--- version 2.1.6 ---
- added date range filtering to file search
- simplified search function
- fixed scrambled non-ASCII file names on UTF-8 systems

--- version 2.1.5 ---
- fixed doubled subdirectories in directory tree
- fixed wrong Joomla path detection (security issue on some systems)

--- version 2.1.4 ---
- fixed security issues found by Trustwave SpiderLabs, Vikas Singhal
- update to the latest version of Archive_Tar
- fixed version check link, now points to extplorer.net

--- version 2.1.3 ---
- fixed serious login vulnerability reported by Brendan Coles of itsecuritysolutions.org (the only changed file is /include/users.php)

--- version 2.1.2 ---
- hide the top and bottom bar in J! 3.0
- fixed installer for J! 2.5

--- version 2.1.1 ---
- Joomla! 3.0 compatibility

--- version 2.1.0 ---

- fixed an XSS-vulnerability (impact: medium, users needs to be logged in)

--- version 2.1.0 RC5 released ---

- fixed password change functionality

--- version 2.1.0 RC4 released ---

- updated version check to work with J! 1.7
- implemented PHPass Library for more secure hashing of passwords: http://www.openwall.com/phpass/ (backwards compatible with previous md5 hashing method)
- updated to ExtJS 3.4.0 (brings support for IE9)
- fixed file-disclosure issue reported by colonelxc@users.sourceforge.net
- support for files with non-ascii chars for editing (thanks gr8ron)
- fixed a fatal error in the webdav module
- added ability to load without fetchscript.php (when it's inaccessible due to server permission problems)

--- version 2.1.0 RC3 released ---

- fixed filesize for files > 2GB
- works and installs on Joomla! 1.6 now

--- version 2.1.0 RC2 released ---

- updated to ExtJS 3.3.1
- fixed Flash Upload
- updated to SWFUPload 2.5 beta
- fixed deprecated warnings because of ereg functions
- fixed some FTP file operations (upload, copy, move, delete)